I hate everything - Refactor model identifiers to use ExtraModelKey